--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="module">
+      import * as bootstrap from 'bootstrap';
+      document
+        .querySelectorAll('[data-bs-toggle="popover"]')
+        .forEach((popover) => {
+          new bootstrap.Popover(popover);
+        });
+    </script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
